language/move-lang/tests/move_check/typing/invalid_type_acquire.exp
error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:14:9 ───
    │
 14 │         move_to_sender(R { v })
    │         ^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to move_to_sender.
    ·
 14 │         move_to_sender(R { v })
    │                        ------- The resource cannot take any type arguments, but found 1 type arguments
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:18:9 ───
    │
 18 │         T,
    │         ^ Invalid 'acquires' annotation
    ·
 18 │         T,
    │         - Expected a nominal resource. Found the type: T
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:19:9 ───
    │
 19 │         u64,
    │         ^^^ Invalid 'acquires' annotation
    ·
 19 │         u64,
    │         --- Expected a nominal resource. Found the type: u64
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:20:9 ───
    │
 20 │         X::R,
    │         ^^^^ Invalid 'acquires' annotation
    ·
 20 │         X::R,
    │         ---- The type '0x1::X::R' was not declared in the current module. Global storage access is internal to the module'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:10:12 ───
    │
 21 │         S,
    │         ^ Invalid 'acquires' annotation
    ·
 21 │         S,
    │         - Expected a nominal resource. Found the type: 0x1::M::S
    ·
 10 │     struct S {}
    │            - Declared as a normal struct here
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:22:9 ───
    │
 22 │         R<u64>,
    │         ^^^^^^ Invalid 'acquires' annotation
    ·
 22 │         R<u64>,
    │         ------ The resource cannot take any type arguments, but found 1 type arguments
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:23:9 ───
    │
 23 │         R<T>
    │         ^^^^ Invalid 'acquires' annotation
    ·
 23 │         R<T>
    │         ---- The resource cannot take any type arguments, but found 1 type arguments
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:32:9 ───
    │
 32 │         destroy(move_from(a));
    │         ^^^^^^^^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:32:17 ───
    │
 32 │         destroy(move_from(a));
    │                 ^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:33:17 ───
    │
 33 │         destroy(move_from<T>(a));
    │                 ^^^^^^^^^^^^^^^ Invalid call to move_from.
    ·
 33 │         destroy(move_from<T>(a));
    │                           - Expected a nominal resource. Found the type: T
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:34:17 ───
    │
 34 │         destroy(move_from<u64>(a));
    │                 ^^^^^^^^^^^^^^^^^ Invalid call to move_from.
    ·
 34 │         destroy(move_from<u64>(a));
    │                           --- Expected a nominal resource. Found the type: u64
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:35:17 ───
    │
 35 │         destroy(move_from<X::R>(a));
    │                 ^^^^^^^^^^^^^^^^^^ Invalid call to move_from.
    ·
 35 │         destroy(move_from<X::R>(a));
    │                           ---- The type '0x1::X::R' was not declared in the current module. Global storage access is internal to the module'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:10:12 ───
    │
 36 │         destroy(move_from<S>(a));
    │                 ^^^^^^^^^^^^^^^ Invalid call to move_from.
    ·
 36 │         destroy(move_from<S>(a));
    │                           - Expected a nominal resource. Found the type: 0x1::M::S
    ·
 10 │     struct S {}
    │            - Declared as a normal struct here
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:37:17 ───
    │
 37 │         destroy(move_from<R<u64>>(a));
    │                 ^^^^^^^^^^^^^^^^^^^^ Invalid call to move_from.
    ·
 37 │         destroy(move_from<R<u64>>(a));
    │                           ------ The resource cannot take any type arguments, but found 1 type arguments
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:38:17 ───
    │
 38 │         destroy(move_from<R<T>>(a));
    │                 ^^^^^^^^^^^^^^^^^^ Invalid call to move_from.
    ·
 38 │         destroy(move_from<R<T>>(a));
    │                           ---- The resource cannot take any type arguments, but found 1 type arguments
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:40:9 ───
    │
 40 │         borrow_global(a);
    │         ^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:41:9 ───
    │
 41 │         borrow_global<T>(a);
    │         ^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global.
    ·
 41 │         borrow_global<T>(a);
    │                       - Expected a nominal resource. Found the type: T
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:42:9 ───
    │
 42 │         borrow_global<u64>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global.
    ·
 42 │         borrow_global<u64>(a);
    │                       --- Expected a nominal resource. Found the type: u64
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:43:9 ───
    │
 43 │         borrow_global<X::R>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global.
    ·
 43 │         borrow_global<X::R>(a);
    │                       ---- The type '0x1::X::R' was not declared in the current module. Global storage access is internal to the module'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:10:12 ───
    │
 44 │         borrow_global<S>(a);
    │         ^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global.
    ·
 44 │         borrow_global<S>(a);
    │                       - Expected a nominal resource. Found the type: 0x1::M::S
    ·
 10 │     struct S {}
    │            - Declared as a normal struct here
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:45:9 ───
    │
 45 │         borrow_global<R<u64>>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global.
    ·
 45 │         borrow_global<R<u64>>(a);
    │                       ------ The resource cannot take any type arguments, but found 1 type arguments
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:46:9 ───
    │
 46 │         borrow_global<R<T>>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global.
    ·
 46 │         borrow_global<R<T>>(a);
    │                       ---- The resource cannot take any type arguments, but found 1 type arguments
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:48:9 ───
    │
 48 │         borrow_global_mut(a);
    │         ^^^^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:49:9 ───
    │
 49 │         borrow_global_mut<T>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global_mut.
    ·
 49 │         borrow_global_mut<T>(a);
    │                           - Expected a nominal resource. Found the type: T
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:50:9 ───
    │
 50 │         borrow_global_mut<u64>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global_mut.
    ·
 50 │         borrow_global_mut<u64>(a);
    │                           --- Expected a nominal resource. Found the type: u64
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:51:9 ───
    │
 51 │         borrow_global_mut<X::R>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global_mut.
    ·
 51 │         borrow_global_mut<X::R>(a);
    │                           ---- The type '0x1::X::R' was not declared in the current module. Global storage access is internal to the module'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:10:12 ───
    │
 52 │         borrow_global_mut<S>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global_mut.
    ·
 52 │         borrow_global_mut<S>(a);
    │                           - Expected a nominal resource. Found the type: 0x1::M::S
    ·
 10 │     struct S {}
    │            - Declared as a normal struct here
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:53:9 ───
    │
 53 │         borrow_global_mut<R<u64>>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global_mut.
    ·
 53 │         borrow_global_mut<R<u64>>(a);
    │                           ------ The resource cannot take any type arguments, but found 1 type arguments
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:54:9 ───
    │
 54 │         borrow_global_mut<R<T>>(a);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to borrow_global_mut.
    ·
 54 │         borrow_global_mut<R<T>>(a);
    │                           ---- The resource cannot take any type arguments, but found 1 type arguments
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:56:9 ───
    │
 56 │         exists(a);
    │         ^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:57:9 ───
    │
 57 │         exists<T>(a);
    │         ^^^^^^^^^^^^ Invalid call to exists.
    ·
 57 │         exists<T>(a);
    │                - Expected a nominal resource. Found the type: T
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:58:9 ───
    │
 58 │         exists<u64>(a);
    │         ^^^^^^^^^^^^^^ Invalid call to exists.
    ·
 58 │         exists<u64>(a);
    │                --- Expected a nominal resource. Found the type: u64
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:59:9 ───
    │
 59 │         exists<X::R>(a);
    │         ^^^^^^^^^^^^^^^ Invalid call to exists.
    ·
 59 │         exists<X::R>(a);
    │                ---- The type '0x1::X::R' was not declared in the current module. Global storage access is internal to the module'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:10:12 ───
    │
 60 │         exists<S>(a);
    │         ^^^^^^^^^^^^ Invalid call to exists.
    ·
 60 │         exists<S>(a);
    │                - Expected a nominal resource. Found the type: 0x1::M::S
    ·
 10 │     struct S {}
    │            - Declared as a normal struct here
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:61:9 ───
    │
 61 │         exists<R<u64>>(a);
    │         ^^^^^^^^^^^^^^^^^ Invalid call to exists.
    ·
 61 │         exists<R<u64>>(a);
    │                ------ The resource cannot take any type arguments, but found 1 type arguments
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:62:9 ───
    │
 62 │         exists<R<T>>(a);
    │         ^^^^^^^^^^^^^^^ Invalid call to exists.
    ·
 62 │         exists<R<T>>(a);
    │                ---- The resource cannot take any type arguments, but found 1 type arguments
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:64:9 ───
    │
 64 │         move_to_sender(any());
    │         ^^^^^^^^^^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:64:24 ───
    │
 64 │         move_to_sender(any());
    │                        ^^^^^ Could not infer this type. Try adding an annotation
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:65:9 ───
    │
 65 │         move_to_sender<T>(any());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to move_to_sender.
    ·
 65 │         move_to_sender<T>(any());
    │                        - Expected a nominal resource. Found the type: T
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:66:9 ───
    │
 66 │         move_to_sender<u64>(any());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to move_to_sender.
    ·
 66 │         move_to_sender<u64>(any());
    │                        --- Expected a nominal resource. Found the type: u64
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:67:9 ───
    │
 67 │         move_to_sender<X::R>(any());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to move_to_sender.
    ·
 67 │         move_to_sender<X::R>(any());
    │                        ---- The type '0x1::X::R' was not declared in the current module. Global storage access is internal to the module'
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:10:12 ───
    │
 68 │         move_to_sender<S>(any());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to move_to_sender.
    ·
 68 │         move_to_sender<S>(any());
    │                        - Expected a nominal resource. Found the type: 0x1::M::S
    ·
 10 │     struct S {}
    │            - Declared as a normal struct here
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:69:9 ───
    │
 69 │         move_to_sender<R<u64>>(any());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to move_to_sender.
    ·
 69 │         move_to_sender<R<u64>>(any());
    │                        ------ The resource cannot take any type arguments, but found 1 type arguments
    │

error: 

    ┌── tests/move_check/typing/invalid_type_acquire.move:70:9 ───
    │
 70 │         move_to_sender<R<T>>(any());
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^ Invalid call to move_to_sender.
    ·
 70 │         move_to_sender<R<T>>(any());
    │                        ---- The resource cannot take any type arguments, but found 1 type arguments
    │

